WebCore/platform/graphics/GraphicsContext.h
@@ -239,7 +239,7 @@ namespace WebCore {
         void clipOutRoundedRect(const IntRect&, const IntSize& topLeft, const IntSize& topRight, const IntSize& bottomLeft, const IntSize& bottomRight);
         void clipPath(WindRule);
         void clipToImageBuffer(const FloatRect&, const ImageBuffer*);
-        void clipConvexPolygon(size_t numPoints, const FloatPoint*);
+        void clipConvexPolygon(size_t numPoints, const FloatPoint*, bool antialias = true);
 
         int textDrawingMode();
         void setTextDrawingMode(int);
