WebCore/platform/graphics/skia/GraphicsContextSkia.cpp
@@ -478,7 +478,7 @@ void GraphicsContext::drawConvexPolygon(size_t numPoints,
     }
 }
 
-void GraphicsContext::clipConvexPolygon(size_t numPoints, const FloatPoint* points)
+void GraphicsContext::clipConvexPolygon(size_t numPoints, const FloatPoint* points, bool antialiased)
 {
     if (paintingDisabled())
         return;
